# ultimateALPR-SDK

samples/c++/videorecognizer/: CMakeLists.txt  FILES_CREATED.md  PYTHON_TO_CPP_COMPARISON.md  README.md  build.sh  test_build.sh  videorecognizer.cpp
samples/python/recognizer/: videorecognizer.py
